--- a/pom.xml
+++ b/pom.xml
@@ -21,13 +21,20 @@
 			<version>3.0.1</version>
 			<!-- <scope>provided</scope> -->
 		</dependency>
+		
+		<dependency>
+	    		<groupId>org.sonarsource.sonarqube</groupId>
+    			<artifactId>sonar-scanner-protocol</artifactId>
+   			 <version>6.7.6</version>
+	       </dependency>
+		
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
-	
+		
 	</dependencies>
 	<distributionManagement>
 		 <snapshotRepository>
