--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,10 @@
 		    <id>nexus</id>
 		    <url>http://10.20.14.81:8081/repository/maven-releases/</url>
 		</repository>
+		<repository>
+		    <id>GitHub</id>
+		    <url>https://github.com/satishthakare/xortest/</url>
+		</repository>
   	</distributionManagement>
 	
 <build>
